# lithology_prediction_using_machine_learning

./: .gitignore  LICENSE  README.md  __init__.py  environment.yml  pyproject.toml  references  visualisation.py
data/facies_label/: 15_9-14  15_9-17  15_9-23  16_1-2  16_1-6A  16_10-1  16_10-2  16_10-3  16_2-16  16_5-3  16_7-4  16_7-5  16_7-6  16_8-1  17_4-1  25_10-10  25_10-11  25_11-19S  25_11-24  25_11-5  25_2-13T4  25_5-1  25_6-1  25_6-3  25_7-2  25_8-7  25_9-1  29_3-1  29_6-1  30_3-5S  30_6-5  31_2-19S  31_2-8  31_2-9  31_3-4  31_4-10  31_6-8  33_6-3S  33_9-17  34_10-21  (+22 more)
data/litho_label/: 15_9-13  15_9-15  16_10-5  16_11-1ST3  16_2-11A  16_2-6  16_2-7  16_4-1  17_11-1  18_8-1  25_11-15  25_2-14  25_2-7  25_3-1  25_4-5  25_5-3  25_5-4  25_6-2  25_8-5S  26_4-1  30_3-3  31_2-1  31_2-10  31_2-21S  31_2-7  31_3-1  31_3-2  31_3-3  31_4-5  31_5-4S  31_6-5  32_2-1  33_5-2  33_9-1  34_10-16R  34_10-19  34_11-2S  34_12-1  34_3-1A  34_3-2S  (+17 more)
src/lithology_prediction/: __init__.py  model.py  preprocess.py
