[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lithology-prediction"
version = "0.1.0"
description = "Lithology prediction from wireline logs using machine learning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Indah Mustika Dewi" }]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "joblib>=1.3",
  "lasio>=0.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "black>=24.0",
  "ipykernel>=6.0",
]

[project.scripts]
litho-train = "lithology_prediction.train:main"
litho-predict = "lithology_prediction.predict:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100


