[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lithology-prediction"
version = "0.1.0"
description = "Lithology prediction from wireline logs using machine learning."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Indah Mustika Dewi"}
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "lasio",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
